earney/scheduler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  namespace: earney
  labels:
    app: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: scheduler
          image: ghcr.io/terranblake/earney-api
          lifecycle:
            postStart:
              exec:
                command: [
                  "/bin/sh",
                  "-c",
                  "cp /tmp/files/tdameritrade.json /usr/config/tdameritrade/tdameritrade.json && ls /usr/config/tdameritrade"
                  ]
          imagePullPolicy: Always
          command: ["celery", "-A", "scheduler", "beat", "-S", "redbeat.RedBeatScheduler"]
          volumeMounts:
            - name: config
              mountPath: /usr/config/server
            - name: tdameritrade
              readOnly: false
              mountPath: /tmp/files
            - name: tmp-files
              mountPath: /usr/config/tdameritrade
      volumes:
        - name: config
          configMap:
            name: earney-server-config
        - name: tdameritrade
          configMap:
            name: earney-tdameritrade-auth
        - name: tmp-files
          emptyDir: {}
