earney/dashboard.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: earney
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: dashboard
          image: ghcr.io/terranblake/earney-dashboard
          imagePullPolicy: Always
          command: ["npm", "start"]
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/src/config
      volumes:
        - name: config
          configMap:
            name: earney-dashboard-config
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: earney
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 3000
      name: http
  clusterIP: None
  type: ClusterIP
