earney/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: earney
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: bitnami/postgresql
          ports:
          - containerPort: 5432
      volumes:
        - name: postgres-creds
          secret:
            secretName: postgres-creds
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: earney
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
  - port: 5432
    name: postgres
    targetPort: 5432
  selector:
    app: postgres
