earney/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: earney
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
          - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: earney
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    name: redis
    targetPort: 6379
  selector:
    app: redis
